cmake_minimum_required(VERSION 3.1)

project(gui
    LANGUAGES CXX
    VERSION 0.1.0
    )

list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")

# Find includes in corresponding build directories
set(CMAKE_INCLUDE_CURRENT_DIR ON)

find_package(Qt5 COMPONENTS Core Widgets OpenGL REQUIRED)
find_package(OpenGL REQUIRED)

find_package(PkgConfig REQUIRED)
pkg_check_modules(sigc++-2.0 REQUIRED sigc++-2.0)

set(gui_HEADERS
    src/DefaultProgressIndicator.h++
    src/ProjectVisitor/OutputResultsInNodesCSVVisitor.h++
    src/ProjectVisitor/SetNodeRestraintsVisitor.h++
    src/ProjectVisitor/ProjectVisitor.h++
    src/ProjectVisitor/MoveNodesVisitor.h++
    src/ProjectVisitor/OutputElementStatisticsVisitor.h++
    src/ProjectVisitor/SetDomainLoadsVisitor.h++
    src/ProjectVisitor/OutputResultsInNodesVisitor.h++
    src/Selection.h++
    src/SelectionManager.h++
    src/Document.h++
    src/ProgramOptions.h++
    src/FempApplication.h++
    src/FempSettings.h++
    src/viewer/InputStates/ISStart.h++
    src/viewer/InputStates/ISLeftClick.h++
    src/viewer/InputStates/InputState.h++
    src/viewer/InputStates/Input.h++
    src/viewer/InputStates/ISRightClick.h++
    src/viewer/InputStates/ISLeftDrag.h++
    src/viewer/InputStates/ISRightDrag.h++
    src/viewer/boundaries/SphericalBoundary.h++
    src/viewer/boundaries/BoundaryStrategy.h++
    src/viewer/boundaries/CollisionDetection.h++
    src/viewer/SceneGraphComponents/Operations/SelectRayIntersectionOperation.h++
    src/viewer/SceneGraphComponents/Operations/SelectFrustumInclusionOperation.h++
    src/viewer/SceneGraphComponents/Operations/OperationsVisitor.h++
    src/viewer/SceneGraphComponents/Operations/ToggleSelectionOperation.h++
    src/viewer/SceneGraphComponents/Operations/ToggleRenderOperation.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/StressFieldRepresentationPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldRepresentationPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/OpaqueRepresentationPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/ElementRepresentationPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/ElementRepresentationFlyweightFactory.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressFieldRepresentation.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressFieldFactory.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressTensor.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress33GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/VonMisesGradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/NeutralGradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain13GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress23GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/ConstantGradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress12GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain23GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain33GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain12GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain11GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress22GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress11GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress13GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain22GradientFieldPolicy.h++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/GradientFieldFlyweightFactory.h++
    src/viewer/SceneGraphComponents/SGCElement.h++
    src/viewer/SceneGraphComponents/DisplacementsRepresentationPolicy/NoDisplacementsPolicy.h++
    src/viewer/SceneGraphComponents/DisplacementsRepresentationPolicy/DisplacementsPolicy.h++
    src/viewer/SceneGraphComponents/DisplacementsRepresentationPolicy/DisplacementsRepresentationPolicy.h++
    src/viewer/SceneGraphComponents/SGCPickRay.h++
    src/viewer/SceneGraphComponents/SceneGraphException.h++
    src/viewer/SceneGraphComponents/Elements/Prism6.h++
    src/viewer/SceneGraphComponents/Elements/Tetrahedron10.h++
    src/viewer/SceneGraphComponents/Elements/Hexahedron20.h++
    src/viewer/SceneGraphComponents/Elements/Tetrahedron4.h++
    src/viewer/SceneGraphComponents/Elements/Prism18.h++
    src/viewer/SceneGraphComponents/Elements/Prism15.h++
    src/viewer/SceneGraphComponents/Elements/Hexahedron27.h++
    src/viewer/SceneGraphComponents/Elements/Hexahedron8.h++
    src/viewer/SceneGraphComponents/SGCNode.h++
    src/viewer/SceneGraphComponents/SceneGraphComponent.h++
    src/viewer/SceneGraphComponents/SceneComponentFactory.h++
    src/viewer/SceneGraphComponents/SGCNodeRestrictions.h++
    src/viewer/SceneGraphComponents/hud/HudObject.h++
    src/viewer/SceneGraphComponents/hud/HudSelection.h++
    src/viewer/PostprocessingViewport.h++
    src/viewer/ModelViewport.h++
    src/viewer/SceneGraph.h++
    src/viewer/ViewportData.h++
    src/viewer/RenderGroup.h++
    src/viewer/TensorFieldViewport.h++
    src/viewer/Camera.h++
    src/viewer/ViewportStates/VPStateDisplacements.h++
    src/viewer/ViewportStates/ViewportState.h++
    src/viewer/ViewportStates/VPStateGradients.h++
    src/viewer/ViewportStates/VPStateModel.h++
    src/viewer/ViewportStates/VPStateTensorFields.h++
    src/viewer/BaseViewport.h++
    src/ui/MainWindow.h++
    src/ui/AnalysisResultsModel.h++
    src/ui/WindowWithResults.h++
    src/ui/wizards/NewProjectWizard.h++
    src/ui/wizards/NewProjectWizardPage3.h++
    src/ui/wizards/NewProjectWizardPageLast.h++
    src/ui/wizards/NewProjectWizardPage2.h++
    src/ui/wizards/NewProjectWizardPage1.h++
    src/ui/MatrixWindow.h++
    src/ui/dock_widgets/CommandLineDockWidget.h++
    src/ui/dock_widgets/SelectionDockWidget.h++
    src/ui/LoadPatternsModel.h++
    src/ui/MatrixModel.h++
    src/ui/BaseWindow.h++
    src/ui/WindowWithPostprocessing.h++
    src/ui/WindowWithWireframe.h++
    src/ui/dialogs/SelectionDialog.h++
    src/ui/dialogs/QuadratureRulesOptionsDialog.h++
    src/ui/dialogs/AnalysisDialog.h++
    src/ui/dialogs/AnalysisProgressDialog.h++
    src/ui/dialogs/MaterialsEditorDialog.h++
    src/ui/dialogs/ResultsRangeDialog.h++
    src/ui/dialogs/DomainLoadsDialog.h++
    src/ui/dialogs/NewMaterialDialog.h++
    src/ui/dialogs/NodeRestrainsDialog.h++
    src/ui/dialogs/NodeActionsDialog.h++
    src/ui/dialogs/AnalysisSummaryDialog.h++
    src/ui/dialogs/LoadPatternDialog.h++
    src/ui/dialogs/TableFilterDialog.h++
    src/ui/dialogs/DisplayOptionsDialog.h++
    src/ui/dialogs/MoveNodesDialog.h++
    src/ui/dialogs/SurfaceSubdivisionDialog.h++
    src/ui/AnalysisResultsWindow.h++
    src/ui/WindowWithScaling.h++
    src/ui/TensorFieldWindow.h++
    src/ui/MdiWindowProperties.h++
    src/ui/ModelWindow.h++
    src/ui/WindowWith.h++
    src/ui/DialogScale.h++
    src/ui/PostprocessingWindow.h++
    src/ui/widgets/AnalysisResultsWidget.h++
    src/ui/widgets/SelectionWidget.h++
    src/ui/widgets/ScalarRangeWidget.h++
    src/ui/widgets/MatrixWidget.h++
    src/ui/MdiWindow.h++
    src/Project.h++
    src/options/DisplayOptions.h++
    src/options/ViewportColors.h++
    src/options/Options.h++
    )

set(gui_SOURCES
    src/Selection.c++
    src/ProjectVisitor/OutputElementStatisticsVisitor.c++
    src/ProjectVisitor/MoveNodesVisitor.c++
    src/ProjectVisitor/OutputResultsInNodesVisitor.c++
    src/ProjectVisitor/SetNodeRestraintsVisitor.c++
    src/ProjectVisitor/OutputResultsInNodesCSVVisitor.c++
    src/ProjectVisitor/SetDomainLoadsVisitor.c++
    src/DefaultProgressIndicator.c++
    src/Document.c++
    src/ProgramOptions.c++
    src/FempSettings.c++
    src/FempApplication.c++
    src/SelectionManager.c++
    src/Project.c++
    src/main.c++
    src/viewer/InputStates/ISRightClick.c++
    src/viewer/InputStates/ISLeftClick.c++
    src/viewer/InputStates/InputState.c++
    src/viewer/InputStates/ISStart.c++
    src/viewer/InputStates/ISRightDrag.c++
    src/viewer/InputStates/Input.c++
    src/viewer/InputStates/ISLeftDrag.c++
    src/viewer/boundaries/SphericalBoundary.c++
    src/viewer/boundaries/BoundaryStrategy.c++
    src/viewer/boundaries/CollisionDetection.c++
    src/viewer/ViewportData.c++
    src/viewer/SceneGraphComponents/Operations/ToggleSelectionOperation.c++
    src/viewer/SceneGraphComponents/Operations/SelectFrustumInclusionOperation.c++
    src/viewer/SceneGraphComponents/Operations/SelectRayIntersectionOperation.c++
    src/viewer/SceneGraphComponents/Operations/OperationsVisitor.c++
    src/viewer/SceneGraphComponents/Operations/ToggleRenderOperation.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldRepresentationPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/StressFieldRepresentationPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/OpaqueRepresentationPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/ElementRepresentationFlyweightFactory.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/ElementRepresentationPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressFieldFactory.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressTensor.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/StressField/StressFieldRepresentation.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/NeutralGradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/VonMisesGradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress33GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress22GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/ConstantGradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain22GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress23GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress11GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain33GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain11GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress12GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Stress13GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain23GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain13GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/Strain12GradientFieldPolicy.c++
    src/viewer/SceneGraphComponents/ElementRepresentationPolicy/GradientFieldPolicy/GradientFieldFlyweightFactory.c++
    src/viewer/SceneGraphComponents/SceneComponentFactory.c++
    src/viewer/SceneGraphComponents/DisplacementsRepresentationPolicy/DisplacementsPolicy.c++
    src/viewer/SceneGraphComponents/DisplacementsRepresentationPolicy/NoDisplacementsPolicy.c++
    src/viewer/SceneGraphComponents/DisplacementsRepresentationPolicy/DisplacementsRepresentationPolicy.c++
    src/viewer/SceneGraphComponents/SGCPickRay.c++
    src/viewer/SceneGraphComponents/SceneGraphComponent.c++
    src/viewer/SceneGraphComponents/Elements/Hexahedron8.c++
    src/viewer/SceneGraphComponents/Elements/Tetrahedron10.c++
    src/viewer/SceneGraphComponents/Elements/Prism18.c++
    src/viewer/SceneGraphComponents/Elements/Hexahedron20.c++
    src/viewer/SceneGraphComponents/Elements/Prism6.c++
    src/viewer/SceneGraphComponents/Elements/Tetrahedron4.c++
    src/viewer/SceneGraphComponents/Elements/Prism15.c++
    src/viewer/SceneGraphComponents/Elements/Hexahedron27.c++
    src/viewer/SceneGraphComponents/SGCNode.c++
    src/viewer/SceneGraphComponents/SGCElement.c++
    src/viewer/SceneGraphComponents/SGCNodeRestrictions.c++
    src/viewer/SceneGraphComponents/hud/HudSelection.c++
    src/viewer/SceneGraphComponents/hud/HudObject.c++
    src/viewer/TensorFieldViewport.c++
    src/viewer/RenderGroup.c++
    src/viewer/ModelViewport.c++
    src/viewer/SceneGraph.c++
    src/viewer/PostprocessingViewport.c++
    src/viewer/BaseViewport.c++
    src/viewer/ViewportStates/ViewportState.c++
    src/viewer/ViewportStates/VPStateModel.c++
    src/viewer/ViewportStates/VPStateDisplacements.c++
    src/viewer/ViewportStates/VPStateGradients.c++
    src/viewer/ViewportStates/VPStateTensorFields.c++
    src/viewer/Camera.c++
    src/ui/AnalysisResultsWindow.c++
    src/ui/AnalysisResultsModel.c++
    src/ui/MatrixWindow.c++
    src/ui/wizards/NewProjectWizardPage2.c++
    src/ui/wizards/NewProjectWizardPage1.c++
    src/ui/wizards/NewProjectWizard.c++
    src/ui/wizards/NewProjectWizardPage3.c++
    src/ui/wizards/NewProjectWizardPageLast.c++
    src/ui/dock_widgets/CommandLineDockWidget.c++
    src/ui/MdiWindowProperties.c++
    src/ui/WindowWithResults.c++
    src/ui/LoadPatternsModel.c++
    src/ui/MdiWindow.c++
    src/ui/PostprocessingWindow.c++
    src/ui/dialogs/AnalysisSummaryDialog.c++
    src/ui/dialogs/SurfaceSubdivisionDialog.c++
    src/ui/dialogs/QuadratureRulesOptionsDialog.c++
    src/ui/dialogs/DisplayOptionsDialog.c++
    src/ui/dialogs/LoadPatternDialog.c++
    src/ui/dialogs/SelectionDialog.c++
    src/ui/dialogs/DomainLoadsDialog.c++
    src/ui/dialogs/MoveNodesDialog.c++
    src/ui/dialogs/AnalysisProgressDialog.c++
    src/ui/dialogs/NewMaterialDialog.c++
    src/ui/dialogs/MaterialsEditorDialog.c++
    src/ui/dialogs/NodeRestrainsDialog.c++
    src/ui/dialogs/NodeActionsDialog.c++
    src/ui/dialogs/AnalysisDialog.c++
    src/ui/dialogs/ResultsRangeDialog.c++
    src/ui/dialogs/TableFilterDialog.c++
    src/ui/WindowWithScaling.c++
    src/ui/BaseWindow.c++
    src/ui/MainWindow.c++
    src/ui/WindowWithWireframe.c++
    src/ui/ModelWindow.c++
    src/ui/WindowWithPostprocessing.c++
    src/ui/widgets/MatrixWidget.c++
    src/ui/widgets/AnalysisResultsWidget.c++
    src/ui/widgets/SelectionWidget.c++
    src/ui/widgets/ScalarRangeWidget.c++
    src/ui/DialogScale.c++
    src/ui/TensorFieldWindow.c++
    src/ui/WindowWith.c++
    src/ui/MatrixModel.c++
    src/options/DisplayOptions.c++
    src/options/ViewportColors.c++
    src/options/Options.c++
    )

set(gui_FORMS
    src/ui/wizards/NewProjectWizardPage3.ui
    src/ui/wizards/NewProjectWizard.ui
    src/ui/wizards/NewProjectWizardPageLast.ui
    src/ui/wizards/NewProjectWizardPage2.ui
    src/ui/wizards/NewProjectWizardPage1.ui
    src/ui/dock_widgets/SelectionDockWidget.ui
    src/ui/dock_widgets/CommandLineDockWidget.ui
    src/ui/MdiWindow.ui
    src/ui/dialogs/MoveNodesDialog.ui
    src/ui/dialogs/MaterialsEditorDialog.ui
    src/ui/dialogs/DisplayOptionsDialog.ui
    src/ui/dialogs/ResultsRangeDialog.ui
    src/ui/dialogs/SurfaceSubdivisionDialog.ui
    src/ui/dialogs/AnalysisProgressDialog.ui
    src/ui/dialogs/TableFilterDialog.ui
    src/ui/dialogs/NodeRestrainDialog.ui
    src/ui/dialogs/AnalysisSummaryDialog.ui
    src/ui/dialogs/LoadPatternDialog.ui
    src/ui/dialogs/AnalysisDialog.ui
    src/ui/dialogs/NodeActionsDialog.ui
    src/ui/dialogs/QuadratureRulesOptionsDialog.ui
    src/ui/dialogs/DomainLoadsDialog.ui
    src/ui/dialogs/NewMaterialDialog.ui
    src/ui/DialogScale.ui
    src/ui/widgets/ScalarRangeWidget.ui
    src/ui/widgets/AnalysisResultsWidget.ui
    src/ui/widgets/MatrixWidget.ui
    src/ui/widgets/SelectionWidget.ui
    src/ui/MainWindow.ui
    )

add_executable( gui
    ${gui_HEADERS}
    ${gui_SOURCES}
    ${gui_FORMS}
    )

target_include_directories(gui
    PUBLIC ${sigc++-2.0_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/src
    )

set_target_properties(gui PROPERTIES
    CXX_STANDARD 11
    CXX_EXTENSIONS OFF
    AUTOMOC ON
    AUTOUIC ON
)

target_link_libraries(gui
    Qt5::Widgets
    Qt5::OpenGL
    OpenGL::GL
    OpenGL::GLU
    libla
    libfemp
    ${sigc++-2.0_LIBRARIES}
    pthread
    )
